# QtSWSULabs

SWSUGUILab9SimpleVariant/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
SWSULab10/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
SWSULab7/: CMakeLists.txt  main.cpp  widget.cpp  widget.h  widget.ui
SWSULab8/: CMakeLists.txt  infile.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
